examples/test/testpolicy10834.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10834
  namespace: namespace205
spec:
  podSelector:
    matchLabels:
      key41: value5
      key24: value26
      key8: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value39
          key29: value38
      podSelector:
        matchLabels:
          key2: value15
